Well, it's 101 lines.

--- a/README.org
+++ b/README.org
@@ -8,5 +8,5 @@ Basically anyone who writes OpenCL needs some kind of wrappers, here is mine.
 types, array, vector, struct and vector of structs.
 
 * Examples
-Just check out "./tests/testwrapper.cc". It's a file less than 100 lines but contains
-above usage.
+Just check out "./tests/testwrapper.cc". It's a file about 100 lines but contains
+all above usages.
